==> AndrewBDavis/keyboard/atreus/matrix.c <==
#include <stdint.h>
#include <stdbool.h>
#include <avr/io.h>
#include <util/delay.h>
#include "print.h"
#include "debug.h"
#include "util.h"
#include "matrix.h"


#ifndef DEBOUNCE
#   define DEBOUNCE	5
#endif
static uint8_t debouncing = DEBOUNCE;

/* matrix state(1:on, 0:off) */
static matrix_row_t matrix[MATRIX_ROWS];
static matrix_row_t matrix_debouncing[MATRIX_ROWS];

static matrix_row_t read_cols(void);
static void init_cols(void);
static void unselect_rows(void);
static void select_row(uint8_t row);


inline
uint8_t matrix_rows(void)
{
    return MATRIX_ROWS;
}

inline
uint8_t matrix_cols(void)
{
    return MATRIX_COLS;
}

void matrix_init(void)
{
    // initialize row and col
    unselect_rows();
    init_cols();

    // initialize matrix state: all keys off
    for (uint8_t i=0; i < MATRIX_ROWS; i++) {
        matrix[i] = 0;
        matrix_debouncing[i] = 0;
    }
}

uint8_t matrix_scan(void)
{
    for (uint8_t i = 0; i < MATRIX_ROWS; i++) {
        select_row(i);
        _delay_us(50);  // without this wait read unstable value.
        matrix_row_t cols = read_cols();
        if (matrix_debouncing[i] != cols) {
            matrix_debouncing[i] = cols;
            if (debouncing) {
                debug("bounce!: "); debug_hex(debouncing); debug("\n");
            }
            debouncing = DEBOUNCE;
        }
        unselect_rows();
    }

    if (debouncing) {
        if (--debouncing) {
            _delay_ms(1);
        } else {
            for (uint8_t i = 0; i < MATRIX_ROWS; i++) {
                matrix[i] = matrix_debouncing[i];
            }
        }
    }

    return 1;
}

bool matrix_is_modified(void)
{
    if (debouncing) return false;
    return true;
}

inline
bool matrix_is_on(uint8_t row, uint8_t col)
{
    return (matrix[row] & ((matrix_row_t)1<<col));
}

inline
matrix_row_t matrix_get_row(uint8_t row)
{
    return matrix[row];
}

void matrix_print(void)
{
    print("\nr/c 0123456789ABCDEF\n");
    for (uint8_t row = 0; row < MATRIX_ROWS; row++) {
        phex(row); print(": ");
        pbin_reverse16(matrix_get_row(row));
        print("\n");
    }
}

uint8_t matrix_key_count(void)
{
    uint8_t count = 0;
    for (uint8_t i = 0; i < MATRIX_ROWS; i++) {
        count += bitpop16(matrix[i]);
    }
    return count;
}

/* Column pin configuration
 * col: 0   1   2   3   4   5   6   7   8   9   10
 * pin: B7  D6  F7  F6  B6  D4  E6  B4  B5  C6  D7
 */
static void  init_cols(void)
{
    DDRB = DDRC = DDRE = DDRF = 0; // columns
    PORTB = PORTC = PORTE = PORTF = 255; // pullup resistors on inputs
    DDRD = 15; // rows (1 2 4 8) high and columns (16 32 64 128) low
    PORTD = 15;
}

static matrix_row_t read_cols(void)
{
#ifdef TEENSY
    return (PINF&(1<<6) ? 0 : (1<<0)) |
           (PINF&(1<<5) ? 0 : (1<<1)) |
           (PINF&(1<<4) ? 0 : (1<<2)) |
           (PINB&(1<<7) ? 0 : (1<<3)) |
           (PINB&(1<<6) ? 0 : (1<<4)) |
           (PINB&(1<<5) ? 0 : (1<<5)) |
           (PINB&(1<<4) ? 0 : (1<<6)) |
           (PINB&(1<<3) ? 0 : (1<<7)) |
           (PINB&(1<<2) ? 0 : (1<<8)) |
           (PINB&(1<<1) ? 0 : (1<<9)) |
           (PINB&(1<<0) ? 0 : (1<<10)) ;
#else
    return (PINB&(1<<7) ? 0 : (1<<10)) |
           (PIND&(1<<6) ? 0 : (1<<9)) |
           (PINF&(1<<7) ? 0 : (1<<8)) |
           (PINF&(1<<6) ? 0 : (1<<7)) |
           (PINB&(1<<6) ? 0 : (1<<6)) |
           (PIND&(1<<4) ? 0 : (1<<5)) |
           (PINE&(1<<6) ? 0 : (1<<4)) |
           (PINB&(1<<4) ? 0 : (1<<3)) |
           (PINB&(1<<5) ? 0 : (1<<2)) |
           (PINC&(1<<6) ? 0 : (1<<1)) |
           (PIND&(1<<7) ? 0 : (1<<0)) ;
#endif
}

/* Row pin configuration
 * row: 0   1   2   3
 * pin: D0  D1  D3  D2    (a-star micro)
 * pin: D0  D1  D2  D3    (teensy2)
 */
static void unselect_rows(void)
{
    PORTD = 15;
}

#define ROW_COUNT 4
#ifdef TEENSY
int rows[ROW_COUNT] = {0, 1, 2, 3};
#else
int rows[ROW_COUNT] = {0, 1, 3, 2};
#endif

static void select_row(uint8_t row)
{
  PORTD = (char)(~(1 << rows[row]));
}
